BUGFIX: Make the reset button visible again

--- a/packages/react-ui-components/src/SelectBox/style.css
+++ b/packages/react-ui-components/src/SelectBox/style.css
@@ -78,11 +78,11 @@
 
 .selectBox__loadingIcon {
     composes: reset from './../reset.css';
-    position: absolute;
+    position: relative;
     top: 0;
-    right: 0;
+    right: 79px;
     z-index: 1;
-    display: block;
+    display: inline-block;
     width: var(--goldenUnit);
     height: var(--goldenUnit);
     text-align: center;
